Fixed mobile-size horizontal scroll on homepage

--- a/_src/sass/layouts/_homepage.scss
+++ b/_src/sass/layouts/_homepage.scss
@@ -25,6 +25,7 @@
         position: absolute;
         bottom: 0;
         width: 100%;
+        overflow-x: hidden;
         margin: 0;
         /* Prevent bottom-padding from causing height issues. */
         padding-bottom: 0;
